tests/execution_spec/snapshots/execution_spec__test-response-header-value.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "Parsing failed because of failed to parse header value",
    "trace": [
      "schema",
      "@server",
      "headers",
      "custom"
    ],
    "description": null
  }
]
