tests/execution_spec/snapshots/execution_spec__test-set-cookie-headers.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar Empty

scalar JSON

scalar PhoneNumber

type Query {
  user(id: Int!): User
}

scalar Url

type User {
  email: String!
  id: Int!
  name: String!
  phone: String
  username: String!
  website: String
}

schema {
  query: Query
}
