tests/execution_spec/snapshots/execution_spec__with-args.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar Empty

scalar JSON

scalar PhoneNumber

type Query {
  user(id: Int!): [User]
}

scalar Url

type User {
  name: String
}

schema {
  query: Query
}
